implementando comentarios
